--- a/ci/infrastructure/pipeline.yml
+++ b/ci/infrastructure/pipeline.yml
@@ -221,6 +221,7 @@ jobs:
         AWS_SECRET_ACCESS_KEY: {{lite-secret-access-key}}
         LITE_KEYPAIR: {{lite-keypair}}
         LITE_PRIVATE_KEY_PATH: {{lite-private-key-path}}
+        AWS_SECURITY_GROUP: {{lite-aws-security-group}}
         AWS_SUBNET_ID: {{lite-aws-subnet-id}}
         LITE_NAME: bosh-lite-1
         BOSH_LITE_ELASTIC_IP: {{lite-1-public-ip-address}}
@@ -367,6 +368,7 @@ jobs:
         AWS_SECRET_ACCESS_KEY: {{lite-secret-access-key}}
         LITE_KEYPAIR: {{lite-keypair}}
         LITE_PRIVATE_KEY_PATH: {{lite-private-key-path}}
+        AWS_SECURITY_GROUP: {{lite-aws-security-group}}
         AWS_SUBNET_ID: {{lite-aws-subnet-id}}
         LITE_NAME: bosh-lite-2
         BOSH_LITE_ELASTIC_IP: {{lite-2-public-ip-address}}
@@ -513,6 +515,7 @@ jobs:
         AWS_SECRET_ACCESS_KEY: {{lite-secret-access-key}}
         LITE_KEYPAIR: {{lite-keypair}}
         LITE_PRIVATE_KEY_PATH: {{lite-private-key-path}}
+        AWS_SECURITY_GROUP: {{lite-aws-security-group}}
         AWS_SUBNET_ID: {{lite-aws-subnet-id}}
         LITE_NAME: bosh-lite-3
         BOSH_LITE_ELASTIC_IP: {{lite-3-public-ip-address}}
@@ -659,6 +662,7 @@ jobs:
         AWS_SECRET_ACCESS_KEY: {{lite-secret-access-key}}
         LITE_KEYPAIR: {{lite-keypair}}
         LITE_PRIVATE_KEY_PATH: {{lite-private-key-path}}
+        AWS_SECURITY_GROUP: {{lite-aws-security-group}}
         AWS_SUBNET_ID: {{lite-aws-subnet-id}}
         LITE_NAME: bosh-lite-4
         BOSH_LITE_ELASTIC_IP: {{lite-4-public-ip-address}}
@@ -810,10 +814,10 @@ jobs:
         AWS_SECRET_ACCESS_KEY: {{lite-secret-access-key}}
         LITE_KEYPAIR: {{acceptance-keypair}}
         LITE_PRIVATE_KEY_PATH: {{acceptance-private-key-path}}
+        AWS_SECURITY_GROUP: {{lite-acceptance-security-group}}
         AWS_SUBNET_ID: {{lite-acceptance-subnet-id}}
         LITE_NAME: {{lite-acceptance-name}}
         LITE_PRIVATE_IP_ADDRESS: {{lite-acceptance-private-ip-address}}
-        BOSH_LITE_SUBNET_ID: {{lite-acceptance-security-group}}
     - task: associate-elastic-ip
       file: cli/ci/infrastructure/tasks/associate-elastic-ip.yml
       params:
