--- a/ci/infrastructure/tasks/provision-cf-lite.yml
+++ b/ci/infrastructure/tasks/provision-cf-lite.yml
@@ -1,7 +1,10 @@
 ---
 platform: linux
 
-image: docker:///cloudfoundry/cli-vagrant-ci
+image_resource:
+  type: docker-image
+  source:
+    repository: relintdockerhubpushbot/provision-bosh-lite
 
 params:
   BOSH_LITE_NAME:
