--- a/cli-release/pipeline.yml
+++ b/cli-release/pipeline.yml
@@ -129,6 +129,8 @@ jobs:
     file: cli-ci/ci/cli-release/tasks/obtain-certificates.yml
     params:
       CERT_PATH: {{osx-certificate-store}}
+  - task: copy-certificates
+    file: cli-ci/ci/cli-release/tasks/copy-certificates.yml
 
   - task: repackage-binaries-and-installers
     file: cli-ci/ci/cli-release/tasks/repackage-binaries-and-installers.yml
