--- a/cli-release/tasks/repackage-binaries-and-installers.yml
+++ b/cli-release/tasks/repackage-binaries-and-installers.yml
@@ -23,9 +23,9 @@ run:
 
     VERSION=$(cat cli-ci/ci/VERSION)
 
-    mv edge-linux-binary-32/cf-cli_edge_linux_i686.tgz repackaged-binaries-and-installers/cf-cli_$VERSION_linux_i686.tgz
-    mv edge-linux-binary-64/cf-cli_edge_linux_x86-64.tgz repackaged-binaries-and-installers/cf-cli_$VERSION_linux_x86-64.tgz
-    mv edge-osx-binary-64/cf-cli_edge_osx.tgz repackaged-binaries-and-installers/cf-cli_$VERSION_osx.tgz
+    mv edge-linux-binary-32/cf-cli_edge_linux_i686.tgz repackaged-binaries-and-installers/cf-cli_${VERSION}_linux_i686.tgz
+    mv edge-linux-binary-64/cf-cli_edge_linux_x86-64.tgz repackaged-binaries-and-installers/cf-cli_${VERSION}_linux_x86-64.tgz
+    mv edge-osx-binary-64/cf-cli_edge_osx.tgz repackaged-binaries-and-installers/cf-cli_${VERSION}_osx.tgz
 
-    mv edge-deb-installer-32/cf-cli-installer_edge_i686.deb repackaged-binaries-and-installers/cf-cli-installer_$VERSION_i686.deb
-    mv edge-deb-installer-64/cf-cli-installer_edge_x86-64.deb repackaged-binaries-and-installers/cf-cli-installer_$VERSION_x86-64.deb
+    mv edge-deb-installer-32/cf-cli-installer_edge_i686.deb repackaged-binaries-and-installers/cf-cli-installer_${VERSION}_i686.deb
+    mv edge-deb-installer-64/cf-cli-installer_edge_x86-64.deb repackaged-binaries-and-installers/cf-cli-installer_${VERSION}_x86-64.deb
