--- a/cli-release/tasks/sign-redhat-installers.yml
+++ b/cli-release/tasks/sign-redhat-installers.yml
@@ -29,5 +29,5 @@ run:
     rpmsign --addsign edge-redhat-installer-32/cf-cli-installer_i686.rpm
     rpmsign --addsign edge-redhat-installer-64/cf-cli-installer_x86-64.rpm
 
-    mv edge-redhat-installer-32/cf-cli-installer_i686.rpm signed-redhat-installer/cf-cli-installer_$VERSION_i686.rpm
-    mv edge-redhat-installer-64/cf-cli-installer_x86-64.rpm signed-redhat-installer/cf-cli-installer_$VERSION_x86-64.rpm
+    mv edge-redhat-installer-32/cf-cli-installer_i686.rpm signed-redhat-installer/cf-cli-installer_${VERSION}_i686.rpm
+    mv edge-redhat-installer-64/cf-cli-installer_x86-64.rpm signed-redhat-installer/cf-cli-installer_${VERSION}_x86-64.rpm
