--- a/cli-release/tasks/sign-redhat-installers.yml
+++ b/cli-release/tasks/sign-redhat-installers.yml
@@ -24,18 +24,14 @@ run:
 
     VERSION=$(cat cli-ci/ci/VERSION)
 
-    cat<< EOF >~/.rpmmacros
-    _gpg_name CF CLI Team <cf-cli-eng@pivotal.io>
-    EOF
-
     mkdir gpg-dir
     export GNUPGHOME=$PWD/gpg-dir
     trap "rm -rf $GNUPGHOME" 0
 
     gpg --import certificates/$GPG_KEY_LOCATION
 
-    rpmsign --addsign edge-redhat-installer-32/cf-cli-installer_i686.rpm
-    rpmsign --addsign edge-redhat-installer-64/cf-cli-installer_x86-64.rpm
+    rpmsign --addsign --define "_gpg_name CF CLI Team <cf-cli-eng@pivotal.io>" edge-redhat-installer-32/cf-cli-installer_i686.rpm
+    rpmsign --addsign --define "_gpg_name CF CLI Team <cf-cli-eng@pivotal.io>" edge-redhat-installer-64/cf-cli-installer_x86-64.rpm
 
     mv edge-redhat-installer-32/cf-cli-installer_i686.rpm signed-redhat-installer/cf-cli-installer_${VERSION}_i686.rpm
     mv edge-redhat-installer-64/cf-cli-installer_x86-64.rpm signed-redhat-installer/cf-cli-installer_${VERSION}_x86-64.rpm
