--- a/ci/cli-release/pipeline.yml
+++ b/ci/cli-release/pipeline.yml
@@ -114,6 +114,8 @@ jobs:
   plan:
   - aggregate:
     - get: cli-ci
+      params:
+        - depth: 2
     - get: edge-linux-binary-32
     - get: edge-linux-binary-64
     - get: edge-osx-binary-64
