--- a/cli-release/pipeline.yml
+++ b/cli-release/pipeline.yml
@@ -163,11 +163,14 @@ jobs:
 - name: update-claw
   serial: true
   plan:
-  - get: cli-ci
-    trigger: true
-    passed: [create-and-sign-installers]
-    params:
-      depth: 2
+  - aggregate:
+    - get: cli-ci
+      trigger: true
+      passed: [create-and-sign-installers]
+      params:
+        depth: 2
+    - get: edge-linux-binary-64
+      passed: [create-and-sign-installers]
   - aggregate:
     - task: claw.run.pivotal.io
       file: cli-ci/ci/cli-release/tasks/update-claw.yml
