--- a/cli-release/tasks/upload-releases.yml
+++ b/cli-release/tasks/upload-releases.yml
@@ -22,8 +22,7 @@ run:
   - |
     set -ex
 
-    #VERSION=$(cat cli-ci/ci/VERSION)
-    VERSION="new-release-process"
+    VERSION=$(cat cli-ci/ci/VERSION)
 
     aws s3 cp repackaged-binaries-and-installers/ s3://cf-cli-releases/releases/v${VERSION}/ --recursive
     aws s3 cp signed-osx-installer/ s3://cf-cli-releases/releases/v${VERSION}/ --recursive
