--- a/cli-release/tasks/publish-debian.yml
+++ b/cli-release/tasks/publish-debian.yml
@@ -2,7 +2,7 @@ platform: linux
 image: docker:///cloudfoundry/cli-ci
 
 inputs:
-- name: cli-ci
+- name: cli
 - name: certificates
 
 params:
@@ -28,7 +28,7 @@ run:
 
     export DEBIAN_FRONTEND=noninteractive
 
-    VERSION=$(cat cli-ci/ci/VERSION)
+    VERSION=$(cat cli/ci/VERSION)
 
     mkdir installers
     curl -L "https://cli.run.pivotal.io/stable?release=debian32&version=${VERSION}&source=github-rel" > installers/cf-cli-installer_${VERSION}_i686.deb
