--- a/cli-release/tasks/update-claw.yml
+++ b/cli-release/tasks/update-claw.yml
@@ -11,7 +11,7 @@ params:
   CF_SPACE:
 
 inputs:
-- name: cli-ci
+- name: cli
 - name: edge-linux-binary-64
 
 run:
@@ -23,7 +23,7 @@ run:
 
     tar -zxf edge-linux-binary-64/*.tgz
 
-    LATEST_VERSION=$(cat cli-ci/ci/VERSION)
+    LATEST_VERSION=$(cat cli/ci/VERSION)
 
     ./cf login -a $CF_API -u "$CF_USERNAME" -p "$CF_PASSWORD" -o "$CF_ORGANIZATION" -s "$CF_SPACE"
     CURRENT_VERSIONS=$(./cf env claw | grep AVAILABLE_VERSIONS | awk '{print $2}')
